--- a/CSS/bootstrap.css
+++ b/CSS/bootstrap.css
@@ -1322,7 +1322,9 @@ pre code {
 
 .table th,
 .table td {
-  padding: 0.75rem;
+  /*padding: 0.75rem;
+  Electron: STOP FREAKING COMPILING THIS EVEN WHEN ITS
+  BEING OVERRIDDEN!*/
   vertical-align: top;
   border-top: 1px solid #e9ecef;
 }
