--- a/CSS/css.css
+++ b/CSS/css.css
@@ -9,3 +9,19 @@ tr td{
     padding: 0;
     border-top: 0;
 }
+
+#testParameterForm{
+    display: none;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 35px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+    padding: 10px;
+}
